--- a/zamowienia.html
+++ b/zamowienia.html
@@ -56,7 +56,7 @@
         <button id="przycisk">Wybrany kolor</button>
     </div>
     <div class="stopka">
-        Autor strony: <i>Bartłomiej Waliczek</i>
+        Autor strony: <i>Jakub Seratowicz</i>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
