--- a/zamowienia.html
+++ b/zamowienia.html
@@ -13,7 +13,7 @@
         </a>
     </div>
     <div class="gorny">
-        <a href="zamowienie.html" class="odnosnik">Zamówienie</a>
+        <a href="zamowienia.html" class="odnosnik">Zamówienie</a>
     </div>
     <div class="baner">
         <h2>Zamów nasz produkt</h2>
