--- a/zamowienie.html
+++ b/zamowienie.html
@@ -56,7 +56,7 @@
         <button id="przycisk">Wybrany kolor</button>
     </div>
     <div class="stopka">
-        Autor strony: <i>Jakub Seratowicz</i>
+        Autor strony: <i><b>Jakub Seratowicz</b></i>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
